Adjusted appearence of peak dose, phantom size and patient height and mass data. Now automatically adjusting the number of decimal places used to display skin dose values. Switched the skin dose values to the right of the colour scale to avoid lots of white space between the values and the colour scale when only a few decimal places are shown. References issue #61

--- a/openrem/remapp/static/css/openrem-extra.css
+++ b/openrem/remapp/static/css/openrem-extra.css
@@ -177,9 +177,10 @@ div.skinDoseMapFullscreenBtn {
 div.skinDoseMapInformation {
   position: absolute;
   padding: 0px;
-  top: -7px;
+  top: -5px;
   left: 5px;
   z-index: 15;
+  font-size: x-small;
 }
 
 div.colourScale {
